# actioncenter-kicker-applet

./: CMakeL10n.txt  CMakeLists.txt  ConfigureChecks.cmake  README  actioncenter_applet.kdevelop  config.h.cmake
assets/: CMakeLists.txt  action1.sh  action2.sh  action3.sh  action4.sh  action5.sh  actions.sh  notif.sh  proj.sh
po/: Makefile
src/: CMakeL10n.txt  CMakeLists.txt  action_tile.cpp  action_tile.h  actioncenter_applet.cpp  actioncenter_applet.desktop  actioncenter_applet.h
translations/desktop_files/: actioncenter_panelapplet-desktops.pot
translations/messages/: actioncenter_panelapplet.pot
